--- a/package.json
+++ b/package.json
@@ -1,10 +1,52 @@
 {
   "name": "tictactoe",
-  "version": "0.0.2",
-  "description": "Game tictactoe with jQuery",
-  "author": "Luiz Paulo (@lppjunior)",
+  "version": "0.0.3",
+  "description": "Game tictactoe core logical developed with es2020",
+  "private": true,
+  "author": {
+    "name": "Luiz Paulo",
+    "email": "lppjunior@gmail.com",
+    "url": "https://lppjunior.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lppjunior/tictactoe-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lppjunior/tictactoe-js/issues"
+  },
+  "homepage": "https://github.com/lppjunior/tictactoe-js.git#readme",
+  "type": "module",
   "license": "MIT",
-  "dependencies": {
-    "jquery": "^3.6.0"
+  "scripts": {
+    "clean:dist": "npx rimraf dist",
+    "lint": "npx eslint --ext js ./src",
+    "lint:fix": "npx eslint --ext js ./src --fix",
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@builder.io/partytown": "^0.10.3",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@vitejs/plugin-legacy": "^6.0.2",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^0.25.1",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.85.1",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.2.1"
   }
 }
