--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "sass": "^1.85.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.1"
+  },
+  "dependencies": {
+    "@lppjunior/pattern-js": "^1.3.1"
   }
 }
